# service-conversion-chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  bootstrap.py  config.py  main.py  worker.py
app/application/: pipeline.py  services.py  strategies.py
app/domain/: __init__.py  models.py  ports.py
app/infrastructure/: __init__.py  adapters.py  auth.py  database.py  event_bus.py  knowledge.py  logging.py  openai_adapter.py  orm.py  redis_adapters.py  repositories.py  secrets.py  seed.py  tenant_ai.py
app/static/: admin-auth.css  admin.css  admin.html  admin.js  app.js  index.html  login.css  login.html  login.js  styles.css
cloudflare/: .dev.vars.example  README.md  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
cloudflare/migrations/: 0001_global_identity.sql  0002_tenant_dashboard.sql  0003_tenant_integrations.sql
cloudflare/src/: auth.ts  crypto.ts  events.ts  index.ts  integrations.ts  knowledge.ts  security.ts  tenant-workspace.ts  types.ts  ui.ts
cloudflare/tests/: auth.test.ts  crypto.test.ts  events.test.ts  integrations.test.ts  knowledge.test.ts  security.test.ts  ui.test.ts
docs/: cloudflare-production.md
migrations/: env.py
migrations/versions/: 20260722_01_initial_multitenant.py  20260722_02_ai_observability.py  20260722_03_tenant_admin.py  20260722_04_tenant_auth.py
tests/: test_admin.py  test_api.py  test_auth.py  test_chatbot.py  test_openai_adapter.py  test_persistence.py  test_redis_event_bus.py
