[project]
name = "service-conversion-chatbot"
version = "0.3.0"
description = "SaaS multi-tenant para cualificacion, agendamiento y conversion por chat"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.16,<2",
  "asyncpg>=0.30,<1",
  "fastapi>=0.115,<1",
  "pydantic>=2.10,<3",
  "redis>=6.2,<7",
  "sqlalchemy[asyncio]>=2.0.41,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "fakeredis>=2.30,<3",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"
